# stock-analysis-mcp

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Makefile  README.md  adk.dockerfile  adk_service.py  bootstrap  compose.yml  constants.py  docker-compose_1.yml  logging_config.py  mcp.dockerfile  nse_client.py  pyproject.toml  requirements.txt  server.py  utils.py
.agents/skills/stock-analysis/: SKILL.md
.agents/skills/stock-analysis/references/: indicators.md
.agents/skills/stock-compare/: SKILL.md
.agents/skills/stock-sentiment/: SKILL.md
.github/workflows/: ci.yml
agent/: agent.py  subagent.py  tools.py
data/: AAPL_2023-01-01_2023-12-31.csv
docker/: adk.dockerfile  compose.yml  mcp.dockerfile
stock_analysis_mcp/: __main__.py  adk_service.py  cli.py  nse_client.py  server.py  utils.py
stock_analysis_mcp/agent/: __init__.py  agent.py  plot_agent.py  subagent.py  ta_agent.py  tools.py
stock_analysis_mcp/agent/tools/: __init__.py  plotting.py
stock_analysis_mcp/api/: adk_server.py  mcp_server.py
stock_analysis_mcp/core/: constants.py  logging_config.py
stock_analysis_mcp/services/: nse_client.py  stock_service.py
tests/agent/: test_plot_agent.py  test_plotting.py  test_schemas.py  test_ta_agent.py
tests/api/: test_adk_server.py  test_mcp_server.py
tests/cli/: test_cli.py
tests/core/: test_logging_config.py
tests/services/: test_security.py  test_stock_service.py
