# ===============================
# Project metadata
# ===============================
[project]
name = "stock-analysis-skills"
version = "0.2.0"
description = "Framework-agnostic stock analysis toolkit with Skills + CLI"
readme = "README.md"
requires-python = ">=3.14,<3.15"

# ===============================
# Dependencies
# ===============================
dependencies = [
    "pandas",
    "ta",
    "praw",
    "colorlog>=6.10.1",
    "python-json-logger>=4.0.0",
    "yfinance>=1.2.0",
    "google-adk",
    "litellm",
    "finplot>=1.9.7",
]

[dependency-groups]
dev = [
    "pytest>=9",
    "pytest-asyncio>=1",
    "pytest-xdist>=3",
    "pytest-mock>=3",
    "ruff>=0",
    "mypy>=1",
    "pyrefly>0",
    "pandas-stubs>=3.0.0.260204",
    "pytest-cov>=7.0.0",
]

# ===============================
# Pytest configuration
# ===============================
[tool.pytest.ini_options]
addopts = "-n auto --dist loadscope"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# ===============================
# Repository configuration for UV
# ===============================
[[tool.uv.index]]
url = "https://pypi.org/simple"

[tool.uv]
package = false

# ===============================
# Type checking & linting
# ===============================
[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "silent"
no_implicit_optional = true
disallow_untyped_defs = true
namespace_packages = true
explicit_package_bases = true
python_version = "3.14"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ===============================
# Ruff configuration
# ===============================
[tool.ruff]
fix = true
line-length = 200
target-version = "py314"

[tool.ruff.lint]
ignore = ["ERA001", "C901", "SIM112", "S311", "S324"]
select = ["E", "F", "Q", "UP", "B", "S", "RUF", "C", "ERA", "PIE", "SIM", "A", "G", "I"]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["D", "S"]

[tool.ruff.lint.isort]
lines-between-types = 1
combine-as-imports = true
known-first-party = ["stock_analysis_mcp"]

# ===============================
# Pyrefly configuration
# ===============================
[tool.pyrefly]
python_version = "3.14"
